tests/compile_errors/015-bad-pattern.buzz
| Could not compile pattern, error at 5: this version of PCRE2 does not have support for \P, \p, or \X
import "std";

test "bad pattern" {
    pat bad = $"bad\pattern";
}